# multi-model-ids-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  apptainer.def  docker-compose.yml
docs/: rfa_bigram_spec.md
experiments/configs/: default.yaml
references/: bibliography.md  unsw_nb15_attack_reference.md
reports/: progress_briefing_2026-05-20.md
reports/eda/: eda_report_UNSW-NB15.md
scripts/: run_eda.py  run_preprocessing.py
src/data/: imbalance_handling.py  loader.py  preprocessor.py  sampling.py  validation.py
src/eda/: complete_eda.py
src/utils/: config.py  gpu_management.py  notifications.py  reproducibility.py
src/visualization/: style.py
