# ============================================================
# Project metadata and tool configuration — Multi-Model IDS
# Dependencies live in requirements.txt (single source of truth),
# and are intentionally not duplicated here.
# ============================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-model-ids"
version = "0.1.0"
description = "Comparative feature engineering and class-level performance analysis of rule-based, classical ML, and deep learning intrusion detection models."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [
    { name = "Thomas Martial Ekwelle Epalle", email = "tekwelle@uoguelph.ca" },
]
keywords = [
    "intrusion-detection",
    "machine-learning",
    "deep-learning",
    "feature-engineering",
    "network-security",
]

[project.urls]
Repository = "https://github.com/Thommartial/multi-model-ids-project"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
